<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arifian.myappportofolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/item_margin"
        android:layout_marginBottom="@dimen/item_margin" />

    <Button
        android:text="@string/app_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app1_button"
        style="@style/AppTheme.Button"
        android:layout_gravity="center_horizontal"
        android:onClick="buttonPressed" />

    <Button
        android:text="@string/app_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app2_button"
        style="@style/AppTheme.Button"
        android:layout_gravity="center_horizontal"
        android:onClick="buttonPressed" />

    <Button
        android:text="@string/app_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app3_button"
        style="@style/AppTheme.Button"
        android:layout_gravity="center_horizontal"
        android:onClick="buttonPressed" />

    <Button
        android:text="@string/app_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app4_button"
        style="@style/AppTheme.Button"
        android:layout_gravity="center_horizontal"
        android:onClick="buttonPressed" />

    <Button
        android:text="@string/app_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app5_button"
        style="@style/AppTheme.Button"
        android:layout_gravity="center_horizontal"
        android:onClick="buttonPressed" />

    <Button
        android:text="@string/app_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app6_button"
        style="@style/AppTheme.Button"
        android:layout_gravity="center_horizontal"
        android:onClick="buttonPressed" />
</LinearLayout>
